coloquei um card e arrumei o footer

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </path>
           </g>
         </svg>
-        <input class="input" type="search" placeholder="Pesquisar"/>
+        <input class="input" type="search" placeholder="Pesquisar" />
       </div><!-- fim da barra de pesquisa -->
     </nav>
   </header><!-- fim do cabeçalho -->
@@ -69,41 +69,49 @@
     </div>
   </section><!-- fim do bloco-imagens-text0  -->
 
+  <!-- card -->
+  <section>
+  <div class="slider" style="
+            --width: 100px;
+            --height: 50px;
+            --quantity: 10;
+">
+    <div class="list">
+      <div class="item" style="--position: 1"><img src="./img/slider1_1.png" alt=""></div>
+      <div class="item" style="--position: 2"><img src="./img/slider1_2.png" alt=""></div>
+      <div class="item" style="--position: 3"><img src="./img/slider1_3.png" alt=""></div>
+      <div class="item" style="--position: 4"><img src="./img/slider1_4.png" alt=""></div>
+      <div class="item" style="--position: 5"><img src="./img/slider1_5.png" alt=""></div>
+      <div class="item" style="--position: 6"><img src="./img/slider1_6.png" alt=""></div>
+      <div class="item" style="--position: 7"><img src="./img/slider1_7.png" alt=""></div>
+      <div class="item" style="--position: 8"><img src="./img/slider1_8.png" alt=""></div>
+      <div class="item" style="--position: 9"><img src="./img/slider1_9.png" alt=""></div>
+      <div class="item" style="--position: 10"><img src="./img/slider1_10.png" alt=""></div>
+    </div>
+  </div>
+
+  <div class="slider" reverse="true" style="
+            --width: 200px;
+            --height: 200px;
+            --quantity: 9;
+        ">
+    <div class="list">
+      <div class="item" style="--position: 1"><img src="./img/cropped1.jpeg" alt=""></div>
+      <div class="item" style="--position: 2"><img src="./img/cropped2.jpeg" alt=""></div>
+      <div class="item" style="--position: 3"><img src="./img/cropped1.jpeg" alt=""></div>
+      <div class="item" style="--position: 4"><img src="./img/cropped2.jpeg" alt=""></div>
+      <div class="item" style="--position: 5"><img src="./img/cropped1.jpeg" alt=""></div>
+      <div class="item" style="--position: 6"><img src="./img/cropped2.jpeg" alt=""></div>
+      <div class="item" style="--position: 7"><img src="./img/cropped1.jpeg" alt=""></div>
+      <div class="item" style="--position: 8"><img src="./img/cropped2.jpeg" alt=""></div>
+      <div class="item" style="--position: 9"><img src="./img/cropped1.jpeg" alt=""></div>
+    </div>
+  </div><!-- fim do card -->
+  </section>
+
   <section class="Sobre" id="Sobre"><!-- Sobre -->
 
   </section><!-- fim do Sobre -->
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
 
   <section class="Produtos" id="Produtos"><!--prudutos -->
 
@@ -171,12 +179,11 @@
     </div><!-- fim do container-form -->
   </section><!-- fim do contato -->
 
-
   <footer><!-- footer -->
     <div id="footer-content"><!-- footer content  -->
       <div id="footer-contacts"><!-- footer-contacts -->
-        <h1>Logo</h1>
-        <p>Its's all about your dreams.</p>
+        <h1>Tropicália</h1>
+        <p>Naturalmente sustentável,confortavelmente elegante</p>
 
         <div id="footer-social-media"><!-- footer-social-media -->
           <a href="#" class="footer-link" id="whatsapp">
@@ -199,36 +206,36 @@
 
       <ul class="footer-list">
         <li>
-          <h3>Blog</h3>
+          <h3>Nosso mundo</h3>
         </li>
         <li>
-          <a href="#" class="footer-link">Fashion</a>
+          <a href="#" class="footer-link">impacto</a>
         </li>
         <li>
-          <a href="#" class="footer-link">Adventures</a>
+          <a href="#" class="footer-link">Pessoas</a>
         </li>
         <li>
-          <a href="#" class="footer-link">Music</a>
+          <a href="#" class="footer-link">Planeta</a>
         </li>
       </ul>
 
       <ul class="footer-list">
         <li>
-          <h3>Products</h3>
+          <h3>Produtos</h3>
         </li>
         <li>
-          <a href="#" class="footer-link">App</a>
+          <a href="#" class="footer-link">Camisas</a>
         </li>
         <li>
-          <a href="#" class="footer-link">Desktop</a>
+          <a href="#" class="footer-link">Acessorios</a>
         </li>
         <li>
-          <a href="#" class="footer-link">Cloud</a>
+          <a href="#" class="footer-link">Fibra</a>
         </li>
       </ul>
 
       <div id="footer-subscribe">
-        <h3>Subscribe</h3>
+        <h3>Fale conosco</h3>
 
         <p>
           Digite seu e-mail para ser notificado sobre nossas soluções de notícias.
@@ -249,6 +256,7 @@
       2024 todos os direitos reservados
     </div><!-- fim do footer-copyright -->
   </footer><!-- fim do footer -->
+
 
   <script src="./js/app.js"></script>
 </body>
