aba SOBRE esta feita

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <ul>
           <li class="nav-item"><a href="#" class="nav-link">Início</a></li>
           <li class="nav-item"><a href="#" class="nav-link">Sobre</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Novidade</a></li>
           <li class="nav-item"><a href="#" class="nav-link">Produtos</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">Acessorios</a></li>
           <li class="nav-item"><a href="#" class="nav-link">Avaliação</a></li>
           <li class="nav-item"><a href="#" class="nav-link">Contato</a></li>
         </ul>
@@ -79,72 +79,51 @@
       <img src="./img/sobre.png" alt="">
     </div>
 
-    <div class="texto-sobre">
-      <h2>Sobre nós</h2>
+      <div class="texto-sobre">
+        <h2>Sobre nós</h2>
 
-      <p>
-        a Tropicália, fundada pelos engenheiros ambientais Sofia Santos e João Martins. Movidos pelo desconforto com
-        materiais não renováveis na produção têxtil, eles revolucionaram a moda ao desenvolver um tecido sustentável
-        derivado do coco.
+        <p>
+          a Tropicália, fundada pelos engenheiros ambientais Sofia Santos e João Martins. Movidos pelo desconforto com
+          materiais não renováveis na produção têxtil, eles revolucionaram a moda ao desenvolver um tecido sustentável
+          derivado do coco.
 
-        No final de 2019, a Tropicália lançou uma loja online e, em 2022, sua loja física se destacou no mercado de moda
-        sustentável. O tecido de coco, além de ser renovável, é resistente e amigo do ambiente, valorizando subprodutos
-        agrícolas antes considerados resíduos.
+          No final de 2019, a Tropicália lançou uma loja online e, em 2022, sua loja física se destacou no mercado de
+          moda
+          sustentável. O tecido de coco, além de ser renovável, é resistente e amigo do ambiente, valorizando
+          subprodutos
+          agrícolas antes considerados resíduos.
 
-      </p>
+        </p>
 
-      <p>
-        Apesar dos obstáculos, a Tropicália recebeu reconhecimento por seus impactos positivos no meio ambiente. O
-        tecido não só simboliza sustentabilidade, mas também oferece durabilidade, conforto e apelo estético.
+        <p>
+          Apesar dos obstáculos, a Tropicália recebeu reconhecimento por seus impactos positivos no meio ambiente. O
+          tecido não só simboliza sustentabilidade, mas também oferece durabilidade, conforto e apelo estético.
 
-        A empresa continua na vanguarda da inovação sustentável, buscando reduzir a pegada ecológica da indústria da
-        moda.
-      </p>
+          A empresa continua na vanguarda da inovação sustentável, buscando reduzir a pegada ecológica da indústria da
+          moda.
+        </p>
 
-      <div id="footer-social-media"><!-- footer-social-media -->
-        <a href="#" class="footer-link" id="whatsapp">
-          <i class="bi bi-whatsapp"></i>
-        </a>
+        <div id="footer-social-media"><!-- footer-social-media -->
+          <a href="#" class="footer-link" id="whatsapp">
+            <i class="bi bi-whatsapp"></i>
+          </a>
 
-        <a href="#" class="footer-link" id="instagram">
-          <i class="bi bi-instagram"></i>
-        </a>
+          <a href="#" class="footer-link" id="instagram">
+            <i class="bi bi-instagram"></i>
+          </a>
 
-        <a href="#" class="footer-link" id="facebook">
-          <i class="bi bi-facebook"></i>
-        </a>
+          <a href="#" class="footer-link" id="facebook">
+            <i class="bi bi-facebook"></i>
+          </a>
 
-        <a href="#" class="footer-link" id="Twitter">
-          <i class="bi bi-twitter"></i>
-        </a>
-      </div><!-- fim do footer-social-media -->
+          <a href="#" class="footer-link" id="Twitter">
+            <i class="bi bi-twitter"></i>
+          </a>
+        </div><!-- fim do footer-social-media -->
+
+      </div>
     </div>
   </section><!-- fim do Sobre -->
-
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
 
   <section class="Produtos" id="Produtos"><!--prudutos -->
     <h1>PRODUTOS</h1>
