ABA de novidades pronta

--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
   <header class="header"><!-- cabeçalho -->
     <nav class="nav-bar">
       <div class="logo">
-        <a href="#">
+        <a href="#inicio">
           <img class="logo-img" src="./img/logo.png" alt="logo" id="logo">
         </a>
       </div>
       <div class="nav-list">
         <ul>
-          <li class="nav-item"><a href="#" class="nav-link">Início</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">Sobre</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">Novidade</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">Produtos</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">Avaliação</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">Contato</a></li>
+          <li class="nav-item"><a href="#inicio" class="nav-link">Início</a></li>
+          <li class="nav-item"><a href="#Sobre" class="nav-link">Sobre</a></li>
+          <li class="nav-item"><a href="#Novidades" class="nav-link">Novidades</a></li>
+          <li class="nav-item"><a href="#Produtos" class="nav-link">Produtos</a></li>
+          <li class="nav-item"><a href="#Avaliação" class="nav-link">Avaliação</a></li>
+          <li class="nav-item"><a href="#Contato" class="nav-link">Contato</a></li>
         </ul>
       </div>
 
@@ -67,7 +67,11 @@
       <h1>NOVOS MODELOS</h1>
       <h1>PARA HOMENS E MULHERES</h1>
       <p>Novas cores e tamanho para todos</p>
-      <button>Nova coleção</button>
+
+      <a href="#Novidades">
+        <button>Nova coleção</button>
+      </a>
+
     </div>
     <div class="img-topo-site ">
       <img src="./img/modelo.png" alt="modelo">
@@ -79,51 +83,123 @@
       <img src="./img/sobre.png" alt="">
     </div>
 
-      <div class="texto-sobre">
-        <h2>Sobre nós</h2>
+    <div class="texto-sobre">
+      <h2>Sobre nós</h2>
 
-        <p>
-          a Tropicália, fundada pelos engenheiros ambientais Sofia Santos e João Martins. Movidos pelo desconforto com
-          materiais não renováveis na produção têxtil, eles revolucionaram a moda ao desenvolver um tecido sustentável
-          derivado do coco.
+      <p>
+        a Tropicália, fundada pelos engenheiros ambientais Sofia Santos e João Martins. Movidos pelo desconforto com
+        materiais não renováveis na produção têxtil, eles revolucionaram a moda ao desenvolver um tecido sustentável
+        derivado do coco.
 
-          No final de 2019, a Tropicália lançou uma loja online e, em 2022, sua loja física se destacou no mercado de
-          moda
-          sustentável. O tecido de coco, além de ser renovável, é resistente e amigo do ambiente, valorizando
-          subprodutos
-          agrícolas antes considerados resíduos.
+        No final de 2019, a Tropicália lançou uma loja online e, em 2022, sua loja física se destacou no mercado de
+        moda
+        sustentável. O tecido de coco, além de ser renovável, é resistente e amigo do ambiente, valorizando
+        subprodutos
+        agrícolas antes considerados resíduos.
 
-        </p>
+      </p>
 
-        <p>
-          Apesar dos obstáculos, a Tropicália recebeu reconhecimento por seus impactos positivos no meio ambiente. O
-          tecido não só simboliza sustentabilidade, mas também oferece durabilidade, conforto e apelo estético.
+      <p>
+        Apesar dos obstáculos, a Tropicália recebeu reconhecimento por seus impactos positivos no meio ambiente. O
+        tecido não só simboliza sustentabilidade, mas também oferece durabilidade, conforto e apelo estético.
 
-          A empresa continua na vanguarda da inovação sustentável, buscando reduzir a pegada ecológica da indústria da
-          moda.
-        </p>
+        A empresa continua na vanguarda da inovação sustentável, buscando reduzir a pegada ecológica da indústria da
+        moda.
+      </p>
 
-        <div id="footer-social-media"><!-- footer-social-media -->
-          <a href="#" class="footer-link" id="whatsapp">
-            <i class="bi bi-whatsapp"></i>
-          </a>
+      <div id="footer-social-media"><!-- footer-social-media -->
+        <a href="#" class="footer-link" id="whatsapp">
+          <i class="bi bi-whatsapp"></i>
+        </a>
 
-          <a href="#" class="footer-link" id="instagram">
-            <i class="bi bi-instagram"></i>
-          </a>
+        <a href="#" class="footer-link" id="instagram">
+          <i class="bi bi-instagram"></i>
+        </a>
 
-          <a href="#" class="footer-link" id="facebook">
-            <i class="bi bi-facebook"></i>
-          </a>
+        <a href="#" class="footer-link" id="facebook">
+          <i class="bi bi-facebook"></i>
+        </a>
 
-          <a href="#" class="footer-link" id="Twitter">
-            <i class="bi bi-twitter"></i>
-          </a>
-        </div><!-- fim do footer-social-media -->
+        <a href="#" class="footer-link" id="Twitter">
+          <i class="bi bi-twitter"></i>
+        </a>
+      </div><!-- fim do footer-social-media -->
 
-      </div>
+    </div>
     </div>
   </section><!-- fim do Sobre -->
+
+  <section class="Novidade" id="Novidades">
+    <h1>Novidades</h1>
+    <div class="cards-container">
+      <div class="cards">
+        <div class="imgBx">
+          <img src="./img/camisa1.0.png" alt="">
+        </div>
+        <div class="contentBx">
+          <h3>Camisa Estampa</h3>
+          <h2 class="price">R$ 100.<small>99</small></h2>
+          <a href="#" class="buy">Compre Agora</a>
+        </div>
+      </div>
+
+      <div class="cards">
+        <div class="imgBx">
+          <img src="./img/camisa2.0.png" alt="">
+        </div>
+        <div class="contentBx">
+          <h3>Camisa Tee</h3>
+          <h2 class="price">R$ 120.<small>99</small></h2>
+          <a href="#" class="buy">Compre Agora</a>
+        </div>
+      </div>
+
+      <div class="cards">
+        <div class="imgBx">
+          <img src="./img/camisa3.0.png" alt="">
+        </div>
+        <div class="contentBx">
+          <h3>Camisa Verve</h3>
+          <h2 class="price">R$ 130.<small>99</small></h2>
+          <a href="#" class="buy">Compre Agora</a>
+        </div>
+      </div>
+
+      <div class="cards">
+        <div class="imgBx">
+          <img src="./img/camisa4.0.png" alt="">
+        </div>
+        <div class="contentBx">
+          <h3>Camisa de Desenho</h3>
+          <h2 class="price">R$ 115.<small>99</small></h2>
+          <a href="#" class="buy">Compre Agora</a>
+        </div>
+      </div>
+
+      <div class="cards">
+        <div class="imgBx">
+          <img src="./img/camisa5.0.png" alt="">
+        </div>
+        <div class="contentBx">
+          <h3>Camisa Trama</h3>
+          <h2 class="price">R$ 105.<small>99</small></h2>
+          <a href="#" class="buy">Compre Agora</a>
+        </div>
+      </div>
+
+      <div class="cards">
+        <div class="imgBx">
+          <img src="./img/camisa6.0.png" alt="">
+        </div>
+        <div class="contentBx">
+          <h3>Camisa Linha</h3>
+          <h2 class="price">R$ 125.<small>99</small></h2>
+          <a href="#" class="buy">Compre Agora</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
 
   <section class="Produtos" id="Produtos"><!--prudutos -->
     <h1>PRODUTOS</h1>
@@ -133,7 +209,7 @@
           <img src="./img/camisa1.png" alt="">
         </div>
         <div class="contentBx">
-          <h3>Estampa Divina</h3>
+          <h3>Camisa Divina</h3>
           <h2 class="price">R$ 50.<small>99</small></h2>
           <a href="#" class="buy">Compre Agora</a>
         </div>
@@ -144,7 +220,7 @@
           <img src="./img/camisa2.png" alt="">
         </div>
         <div class="contentBx">
-          <h3>Tee Favorita</h3>
+          <h3>Camisa Favorita</h3>
           <h2 class="price">R$ 70.<small>99</small></h2>
           <a href="#" class="buy">Compre Agora</a>
         </div>
@@ -166,7 +242,7 @@
           <img src="./img/camisa4.png" alt="">
         </div>
         <div class="contentBx">
-          <h3>Sussurro de Algodão</h3>
+          <h3>Camisa de Algodão</h3>
           <h2 class="price">R$ 55.<small>99</small></h2>
           <a href="#" class="buy">Compre Agora</a>
         </div>
@@ -177,7 +253,7 @@
           <img src="./img/camisa5.png" alt="">
         </div>
         <div class="contentBx">
-          <h3>Trama Trendy</h3>
+          <h3>Camisa Trendy</h3>
           <h2 class="price">R$ 85.<small>99</small></h2>
           <a href="#" class="buy">Compre Agora</a>
         </div>
@@ -188,7 +264,7 @@
           <img src="./img/camisa6.png" alt="">
         </div>
         <div class="contentBx">
-          <h3>Linha Leveza</h3>
+          <h3>Camisa Leveza</h3>
           <h2 class="price">R$ 90.<small>99</small></h2>
           <a href="#" class="buy">Compre Agora</a>
         </div>
@@ -196,19 +272,7 @@
     </div>
   </section><!--fim do produtos -->
 
-  <section class="Acessorios"><!-- acessorios -->
-
-  </section><!-- fim do acessorios -->
-
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-
-  <section class="Avaliação">
+  <section class="Avaliação" id="Avaliação">
     <h1>AVALIAÇÃO</h1>
 
     <div class="slide-container swiper">
@@ -455,7 +519,7 @@
     </div>
   </section>
 
-  <section class="Contato"><!-- contato -->
+  <section class="Contato" id="Contato"><!-- contato -->
     <h1>CONTATO</h1>
     <div class="container-form"><!-- container-form -->
       <iframe class="map"
@@ -532,7 +596,7 @@
           <a href="#" class="footer-link">Camisas</a>
         </li>
         <li>
-          <a href="#" class="footer-link">Acessorios</a>
+          <a href="#" class="footer-link">Vestido</a>
         </li>
         <li>
           <a href="#" class="footer-link">Fibra</a>
