arrumei o ID para direcionar o navbar

--- a/index.html
+++ b/index.html
@@ -61,16 +61,18 @@
       </div><!-- fim da barra de pesquisa -->
     </nav>
   </header><!-- fim do cabeçalho -->
+  <div id="inicio" style="height: 0; width: 0;"></div>
 
-  <section class="bloco-imagens-texto" id="inicio"><!-- bloco-imagens-text0 -->
+  <section class="bloco-imagens-texto"><!-- bloco-imagens-text0 -->
     <div class="meio">
       <h1>NOVOS MODELOS</h1>
-      <h1>PARA HOMENS E MULHERES</h1>
+      <h1>PARA TODAS MULHERES</h1>
       <p>Novas cores e tamanho para todos</p>
 
       <a href="#Novidades">
         <button>Nova coleção</button>
       </a>
+      <div id="Sobre" style="height: 0; width: 0;"></div>
 
     </div>
     <div class="img-topo-site ">
@@ -87,7 +89,7 @@
       <h2>Sobre nós</h2>
 
       <p>
-        a Tropicália, fundada pelos engenheiros ambientais Sofia Santos e João Martins. Movidos pelo desconforto com
+        A Tropicália, fundada pelos engenheiros ambientais Sofia Santos e João Martins. Movidos pelo desconforto com
         materiais não renováveis na produção têxtil, eles revolucionaram a moda ao desenvolver um tecido sustentável
         derivado do coco.
 
@@ -126,10 +128,9 @@
       </div><!-- fim do footer-social-media -->
 
     </div>
-    </div>
-  </section><!-- fim do Sobre -->
+  </section><!-- fim do Sobre --> <div id="Novidades" style="height: 0; width: 0;"></div>
 
-  <section class="Novidade" id="Novidades">
+  <section class="Novidade">
     <h1>Novidades</h1>
     <div class="cards-container">
       <div class="cards">
@@ -138,7 +139,7 @@
         </div>
         <div class="contentBx">
           <h3>Camisa Estampa</h3>
-          <h2 class="price">R$ 100.<small>99</small></h2>
+          <h2 class="price">R$ 134,<small>99</small></h2>
           <a href="#" class="buy">Compre Agora</a>
         </div>
       </div>
@@ -149,7 +150,7 @@
         </div>
         <div class="contentBx">
           <h3>Camisa Tee</h3>
-          <h2 class="price">R$ 120.<small>99</small></h2>
+          <h2 class="price">R$ 134,<small>99</small></h2>
           <a href="#" class="buy">Compre Agora</a>
         </div>
       </div>
@@ -160,7 +161,7 @@
         </div>
         <div class="contentBx">
           <h3>Camisa Verve</h3>
-          <h2 class="price">R$ 130.<small>99</small></h2>
+          <h2 class="price">R$ 134,<small>99</small></h2>
           <a href="#" class="buy">Compre Agora</a>
         </div>
       </div>
@@ -171,7 +172,7 @@
         </div>
         <div class="contentBx">
           <h3>Camisa de Desenho</h3>
-          <h2 class="price">R$ 115.<small>99</small></h2>
+          <h2 class="price">R$ 134,<small>99</small></h2>
           <a href="#" class="buy">Compre Agora</a>
         </div>
       </div>
@@ -182,7 +183,7 @@
         </div>
         <div class="contentBx">
           <h3>Camisa Trama</h3>
-          <h2 class="price">R$ 105.<small>99</small></h2>
+          <h2 class="price">R$ 134,<small>99</small></h2>
           <a href="#" class="buy">Compre Agora</a>
         </div>
       </div>
@@ -193,15 +194,15 @@
         </div>
         <div class="contentBx">
           <h3>Camisa Linha</h3>
-          <h2 class="price">R$ 125.<small>99</small></h2>
+          <h2 class="price">R$ 134,<small>99</small></h2>
           <a href="#" class="buy">Compre Agora</a>
         </div>
       </div>
     </div>
+    <div id="Produtos" style="height: 0; width: 0;"></div>
   </section>
 
-
-  <section class="Produtos" id="Produtos"><!--prudutos -->
+  <section class="Produtos"><!--prudutos -->
     <h1>PRODUTOS</h1>
     <div class="cards-container">
       <div class="cards">
@@ -210,7 +211,7 @@
         </div>
         <div class="contentBx">
           <h3>Camisa Divina</h3>
-          <h2 class="price">R$ 50.<small>99</small></h2>
+          <h2 class="price">R$ 64,<small>99</small></h2>
           <a href="#" class="buy">Compre Agora</a>
         </div>
       </div>
@@ -221,7 +222,7 @@
         </div>
         <div class="contentBx">
           <h3>Camisa Favorita</h3>
-          <h2 class="price">R$ 70.<small>99</small></h2>
+          <h2 class="price">R$ 64,<small>99</small></h2>
           <a href="#" class="buy">Compre Agora</a>
         </div>
       </div>
@@ -232,7 +233,7 @@
         </div>
         <div class="contentBx">
           <h3>Verve Urbana</h3>
-          <h2 class="price">R$ 60.<small>99</small></h2>
+          <h2 class="price">R$ 64,<small>99</small></h2>
           <a href="#" class="buy">Compre Agora</a>
         </div>
       </div>
@@ -243,7 +244,7 @@
         </div>
         <div class="contentBx">
           <h3>Camisa de Algodão</h3>
-          <h2 class="price">R$ 55.<small>99</small></h2>
+          <h2 class="price">R$ 64,<small>99</small></h2>
           <a href="#" class="buy">Compre Agora</a>
         </div>
       </div>
@@ -254,7 +255,7 @@
         </div>
         <div class="contentBx">
           <h3>Camisa Trendy</h3>
-          <h2 class="price">R$ 85.<small>99</small></h2>
+          <h2 class="price">R$ 64,<small>99</small></h2>
           <a href="#" class="buy">Compre Agora</a>
         </div>
       </div>
@@ -265,14 +266,15 @@
         </div>
         <div class="contentBx">
           <h3>Camisa Leveza</h3>
-          <h2 class="price">R$ 90.<small>99</small></h2>
+          <h2 class="price">R$ 64,<small>99</small></h2>
           <a href="#" class="buy">Compre Agora</a>
         </div>
       </div>
     </div>
+    <div id="Avaliação" style="height: 0; width: 0;"></div>
   </section><!--fim do produtos -->
 
-  <section class="Avaliação" id="Avaliação">
+  <section class="Avaliação">
     <h1>AVALIAÇÃO</h1>
 
     <div class="slide-container swiper">
@@ -515,6 +517,7 @@
 
       <div class="swiper-button-next swiper-navBtn"></div>
       <div class="swiper-button-prev swiper-navBtn"></div>
+      <div id="Contato" style="height: 0; width: 0;"></div>
       <div class="swiper-pagination"></div>
     </div>
   </section>
@@ -596,7 +599,7 @@
           <a href="#" class="footer-link">Camisas</a>
         </li>
         <li>
-          <a href="#" class="footer-link">Vestido</a>
+          <a href="#" class="footer-link">Sustentável</a>
         </li>
         <li>
           <a href="#" class="footer-link">Fibra</a>
