salvando o projeto pronto

--- a/index.html
+++ b/index.html
@@ -68,19 +68,18 @@
       <h1>NOVOS MODELOS</h1>
       <h1>PARA TODAS MULHERES</h1>
       <p>Novas cores e tamanho para todos</p>
+     
 
       <a href="#Novidades">
         <button>Nova coleção</button>
       </a>
-      <div id="Sobre" style="height: 0; width: 0;"></div>
-
-    </div>
+    
     <div class="img-topo-site ">
       <img src="./img/modelo.png" alt="modelo">
-    </div>
+    </div> <div id="Sobre" style="height: 0; width: 0;"></div>
   </section><!-- fim do bloco-imagens-text0  -->
-
-  <section class="Sobre" id="Sobre"><!-- Sobre -->
+  
+  <section class="Sobre"><!-- Sobre -->
     <div class="img-sobre">
       <img src="./img/sobre.png" alt="">
     </div>
@@ -128,7 +127,8 @@
       </div><!-- fim do footer-social-media -->
 
     </div>
-  </section><!-- fim do Sobre --> <div id="Novidades" style="height: 0; width: 0;"></div>
+  </section><!-- fim do Sobre -->
+  <div id="Novidades" style="height: 0; width: 0;"></div>
 
   <section class="Novidade">
     <h1>Novidades</h1>
